--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #111;
+  color: white;
 }
 
 code {
@@ -16,6 +18,7 @@ code {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  
 
 }
 
@@ -41,7 +44,7 @@ code {
 
 .section-roadmap {
   width: 100%;
-  height: 200vh;
+  height: 300vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -62,4 +65,93 @@ code {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+
+/* Global  */
+
+h1, h2, h3 { 
+  font-family: sans-serif;
+  text-transform: uppercase;
+  text-align: center;
+  padding-bottom: 1.5rem;
+  font-weight: bolder;
+}
+
+h1 {
+  color: red;
+  font-size: 4rem;
+}
+
+h2 {
+  color: rgb(246, 169, 61);
+  font-size: 2.5rem;
+  font-weight: 900;
+}
+
+h3 {
+  color: white;
+  font-size: 2.2rem;
+}
+
+p {
+  font-family: sans-serif;
+  color: white;
+  font-size: 1.5rem;
+  font-weight: 800;
+  text-transform: uppercase;
+  line-height: 1.5;
+
+}
+
+.p-header {
+  color: red;
+  font-size: 2rem;
+  font-weight: 900;
+}
+
+.p-header2 {
+  color: rgb(246, 169, 61);
+  font-size: 1.8rem;
+  font-weight: 900;
+}
+
+ul {
+
+}
+
+li {
+  list-style: none;
+}
+
+.container {
+  padding: 0 15px;
+  margin: 0;
+  padding-bottom: 4rem;
+}
+
+.cards {
+  display: grid;
+  grid-column-gap: 10px;
+  flex-wrap: wrap;
+  padding:0px;
+  overflow-x: scroll;
+  
+
+
+}
+
+.card {
+  padding: 20px;
+  margin-top: 2rem;
+  border-radius: 12px;
+  background-color: #111;
+  border: solid;
+  border-width: 2.01px;
+  border-color: rgb(246, 169, 61);
+  text-align: center;
+}
+
+.card-container {
+
 }
