--- a/src/index.css
+++ b/src/index.css
@@ -50,6 +50,14 @@ code {
   align-items: center;
 }
 
+.section-all {
+  width: 100%;
+  height: 200vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .section-footer {
   width: 100%;
   height: 40vh;
@@ -81,12 +89,13 @@ h1, h2, h3 {
 h1 {
   color: red;
   font-size: 4rem;
+  font-weight: 900;
 }
 
 h2 {
   color: rgb(246, 169, 61);
   font-size: 2.5rem;
-  font-weight: 900;
+  font-weight: 700;
 }
 
 h3 {
@@ -98,9 +107,13 @@ p {
   font-family: sans-serif;
   color: white;
   font-size: 1.5rem;
-  font-weight: 800;
+  font-weight: 600;
   text-transform: uppercase;
   line-height: 1.5;
+  text-align: center;
+  padding-bottom: 1rem;
+  padding-right: 20rem;
+  padding-left: 20rem
 
 }
 
@@ -142,14 +155,14 @@ li {
 }
 
 .card {
-  padding: 20px;
+  /* padding: 20px;
   margin-top: 2rem;
   border-radius: 12px;
   background-color: #111;
   border: solid;
   border-width: 2.01px;
   border-color: rgb(246, 169, 61);
-  text-align: center;
+  text-align: center; */
 }
 
 .card-container {
