--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,15 @@ justify-content: center;
 align-items: center;
 }
 
+
+.section-ut {
+  width: 100%;
+  height: 200vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  }
+
 .section-roadmap {
 width: 100%;
 height: 300vh;
@@ -78,7 +87,7 @@ align-items: center;
 
 /* Global  */
 
-h1, h2, h3 { 
+h1, h2, h3,h4, h5, h6 { 
 font-family: sans-serif;
 text-transform: uppercase;
 text-align: center;
@@ -105,6 +114,30 @@ color: white;
 font-size: 2.2rem;
 }
 
+h4 {
+color: rgb(246, 169, 61);
+font-size: 1.5rem;
+font-weight: 700;
+
+}
+
+
+h5 {
+  color: rgb(246, 169, 61);
+  font-size: 3.5rem;
+  font-weight: 700;
+
+}
+
+h6 {
+  color: red;
+  font-size: 1.2rem;
+  font-weight: 700;
+
+}
+
+
+
 p {
 font-family: sans-serif;
 color: white;
@@ -113,11 +146,10 @@ font-weight: 600;
 text-transform: uppercase;
 line-height: 1.5;
 text-align: center;
-padding-bottom: 1rem;
-padding-right: 10rem;
-padding-left: 10rem
 
 }
+
+
 
 .p-header {
 color: red;
