--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@ body {
 -moz-osx-font-smoothing: grayscale;
 background-color: #111;
 color: white;
+overflow-x: hidden;
 }
 
 code {
@@ -36,10 +37,10 @@ align-items: center;
 
 .section-nav {
 width: 100%;
-height: 10vh;
-display: flex;
+height: 5vh;
+/* display: flex;
 justify-content: center;
-align-items: center;
+align-items: center; */
 }
 
 
@@ -53,7 +54,7 @@ align-items: center;
 
 .section-roadmap {
 width: 100%;
-height: 300vh;
+height: 320vh;
 display: flex;
 justify-content: center;
 align-items: center;
@@ -69,7 +70,7 @@ align-items: center;
 
 .section-footer {
 width: 100%;
-height: 40vh;
+height: 10vh;
 display: flex;
 justify-content: center;
 align-items: center;
@@ -168,11 +169,19 @@ ul {
 }
 
 li {
+text-decoration: none;
 list-style: none;
+font-family: sans-serif;
+color: white;
+font-size: 1.5rem;
+font-weight: 600;
+text-transform: uppercase;
+line-height: 1.5;
+text-align: center;
 }
 
 .container {
-padding: 0 15px;
+padding: 0 0px;
 margin: 0;
 padding-bottom: 4rem;
 }
