--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -25,8 +25,8 @@
   
   .btn-wallet {
     color: white;
-    position: absolute;
-    bottom: 25rem;
+    /* position: absolute;
+    bottom: 25rem; */
     padding-top: 10px;
     padding-bottom: 10px;
     padding-left: 12px;
