--- a/src/components/Artwork.css
+++ b/src/components/Artwork.css
@@ -1,23 +1,17 @@
 
   
-  
-
-  
-
-  .slider {
-    height: 400px;
-    margin: auto;
-    position: relative;
-    width: 100%;
-    display: grid;
-    place-items: center;
-    overflow: hidden;
-  }
-  
   .slide-track {
     display: flex;
     width: calc(550px * 18);
     animation: scroll 40s linear infinite;
+  }
+
+    
+  .slide-track2 {
+    display: flex;
+    width: calc(550px * 18);
+    animation: scroll 40s linear infinite reverse;
+   
   }
   
   @keyframes scroll {
@@ -28,6 +22,7 @@
       transform: translateX(calc(-450px * 6));
     }
   }
+
   
   
   
@@ -44,6 +39,7 @@
   img {
     width: 100%;
     height: 100%;
+
     transition: transform 1s;
 
     
