--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,30 +1,48 @@
+.footer-container {
+
+    width: 100%;
+    padding-bottom: 1rem;
+    background-color: #111;
+    color: #fff;
+  
+    
+  
+}
+  
+
+
+
 .brand-footer {
-    transform: scale(.3);
-    position: relative;
-    top: 10rem;
+ 
+    
+
+}
+
+.img-logo {
+        transform: scale(.3);
 }
 
 
 .footer-content{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    text-align: center;
+
+
 }
 
 
 
 .socials{
-    list-style: none;
+
+    
     display: flex;
-    align-items: center;
     justify-content: center;
+    align-items: center;
+   
+  
     
 }
 
 .socials li{
-    margin: 150px;
+    transform: scale(.3);
 }
 
 
@@ -32,22 +50,23 @@
 
 
 @media (max-width:500px) {
-.footer-menu ul{
-  display: flex;
-  margin-top: 10px;
-  margin-bottom: 20px;
-}
-
-.socials a{
-    text-decoration: none;
-    color: #fff;
-    transform: scale(.8);
-    padding: 4px;
-
-    border-radius: 50%;
-
-}
-
+    .footer-menu ul{
+        display: flex;
+        margin-top: 10px;
+        margin-bottom: 20px;
+      }
+      
+      .socials a{
+          text-decoration: none;
+          color: #fff;
+          transform: scale(.8);
+          padding: 4px;
+      
+          border-radius: 50%;
+      
+      }
+      
+    
 
 }
 
