--- a/src/components/CollectionStory.css
+++ b/src/components/CollectionStory.css
@@ -4,7 +4,7 @@
 
 }
   
-    .container-about {
+    .container-col {
       flex: 2;
       display: flex;
       flex-direction: row;
@@ -44,14 +44,14 @@
 
       
 
-@media (max-width:500px) {
+@media (max-width:1500px) {
   .like {
     margin:  0;
     padding-bottom: 10rem;
 
 }
   
-    .container-about {
+    .container-col {
       flex: 2;
       display: flex;
       flex-direction: column;
