--- a/src/components/Allocations.css
+++ b/src/components/Allocations.css
@@ -37,16 +37,22 @@
     font-size: 3rem;
   }
 
+ 
+
   p {
     padding-bottom: 1.5rem;
   }
   
   
-  @media (max-width: 480px) {
+  @media (max-width: 500px) {
     .cards {
       display: flex;
       gap: 2rem;
     
+    }
+
+    .all-mobile {
+      font-size: 2.5rem;
     }
 
   
