--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -3,8 +3,11 @@
     display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
     display: -ms-flexbox;      /* TWEENER - IE 10 */
     display: -webkit-flex;     /* NEW - Chrome */
-    display: flex;       
-    padding: 0 15px;      /* NEW, Spec - Opera 12.1, Firefox 20+ */
+    display: flex;
+    flex-direction: row;       
+    padding: 0 15px; 
+    margin: 10px; 
+    gap: 20px;    /* NEW, Spec - Opera 12.1, Firefox 20+ */
 }
 
 .container-about div {
@@ -12,7 +15,8 @@
     -moz-box-flex: 1;         /* OLD - Firefox 19- */
     -webkit-flex: 1;          /* Chrome */
     -ms-flex: 1;              /* IE 10 */
-    flex: 1;                  /* NEW, Spec - Opera 12.1, Firefox 20+ */
+    flex: 1;           
+    flex-direction: column;          /* NEW, Spec - Opera 12.1, Firefox 20+ */
     height: 800px;
     text-align: center;
     border: solid;
@@ -20,13 +24,14 @@
     border-color: rgb(246, 169, 61);
     border-radius: 12px;
     padding: 20px;
+
    
    
 }
 
 
 .p-long {
-    font-size: 22px;
+    font-size: 19px;
 }
 
 .column_center {
@@ -55,6 +60,8 @@
         flex-direction: column;
         gap: 2rem;
         padding-bottom: 150px;
+     
+    
        
     }
     
@@ -77,7 +84,7 @@
     
     
     .p-long {
-        font-size: 22px;
+        font-size: 18px;
     }
     
     .column_center {
