Border Color Changes

--- a/src/components/RoadMap.css
+++ b/src/components/RoadMap.css
@@ -20,7 +20,7 @@
   background-color: #111;
   border: solid;
   border-width: 2.01px;
-  border-color: rgb(246, 169, 61);
+  border-color: red;
   text-align: center;
 
 
@@ -34,7 +34,7 @@
   background-color: #111;
   border: solid;
   border-width: 2.01px;
-  border-color: rgb(246, 169, 61);
+  border-color: red;
   text-align: center;
 
 
