--- a/src/components/CollectionStory.css
+++ b/src/components/CollectionStory.css
@@ -26,7 +26,7 @@
         align-items: center;
         border: solid;
         border-width: 2.01px;
-        border-color: rgb(246, 169, 61);
+        border-color: red;
        
   
               
@@ -73,7 +73,7 @@
         align-items: center;
         border: solid;
         border-width: 2.01px;
-        border-color: rgb(246, 169, 61);
+        border-color: red;
        
   
               
