--- a/src/index.css
+++ b/src/index.css
@@ -179,24 +179,35 @@ font-family: sans-serif;
 color: white;
 font-size: 1.5rem;
 font-weight: 600;
-text-transform: uppercase;
+/* text-transform: uppercase; */
 line-height: 1.5;
 text-align: center;
 
 }
 
 
+.desktop {
+  font-size: 1.5rem;
+
+}
+
+.mobile {
+  display: none;
+}
+
 
 .p-header {
 color: red;
 font-size: 2rem;
 font-weight: 900;
+text-transform: uppercase;
 }
 
 .p-header2 {
 color: rgb(246, 169, 61);
 font-size: 1.8rem;
 font-weight: 900;
+text-transform: uppercase;
 }
 
 
@@ -208,7 +219,7 @@ font-family: sans-serif;
 color: white;
 font-size: 1.5rem;
 font-weight: 600;
-text-transform: uppercase;
+/* text-transform: uppercase; */
 line-height: 1.5;
 text-align: center;
 }
@@ -231,7 +242,7 @@ overflow-x: scroll;
 
 
 
-@media (max-width:1500px) {
+@media (max-width:1100px) {
 
 * {
   overflow-x: hidden;
@@ -409,6 +420,22 @@ color: rgb(246, 169, 61);
 font-size: 1.8rem;
 font-weight: 900;
 }
+
+.desktop {
+    display: none;
+
+}
+
+.mobile {
+  font-size: 1rem;
+  display: flex;
+  align-items:center ;
+  justify-content: center;
+}
+
+
+
+
 
 
 
