--- a/src/components/Utilities.css
+++ b/src/components/Utilities.css
@@ -129,7 +129,7 @@
         margin: 20px 0;
         max-width: 100%;
         padding: 0 10px;
-        text-transform: uppercase;
+        /* text-transform: uppercase; */
         font-size: 1.5rem;
         font-weight: 700;
         color: white;
