--- a/src/index.css
+++ b/src/index.css
@@ -123,7 +123,7 @@ align-items: center;
 
 /* Global  */
 
-h1, h2, h3,h4, h5, h6 { 
+h1, h2, h3,h4, h5 { 
 font-family: sans-serif;
 text-transform: uppercase;
 text-align: center;
@@ -142,12 +142,14 @@ h2 {
 color: rgb(246, 169, 61);
 font-size: 2.5rem;
 font-weight: 700;
+text-transform: none;
 
 }
 
 h3 {
 color: white;
 font-size: 2.2rem;
+text-transform: none;
 }
 
 h4 {
@@ -169,6 +171,8 @@ h6 {
   color: red;
   font-size: 1.2rem;
   font-weight: 700;
+  line-height: 2rem;
+  text-align: center;
 
 }
 
@@ -345,7 +349,7 @@ align-items: center;
 
 /* Global  */
 
-h1, h2, h3,h4, h5, h6 { 
+h1, h2, h3,h4, h5 { 
 font-family: sans-serif;
 text-transform: uppercase;
 text-align: center;
@@ -362,19 +366,21 @@ font-weight: 900;
 
 h2 {
 color: rgb(246, 169, 61);
-font-size: 2.5rem;
+font-size: 2rem;
 font-weight: 700;
+text-transform: none;
 
 }
 
 h3 {
 color: white;
 font-size: 2.2rem;
+text-transform: none;
 }
 
 h4 {
 color: rgb(246, 169, 61);
-font-size: 1.5rem;
+font-size: 1.3rem;
 font-weight: 700;
 
 }
@@ -391,6 +397,8 @@ h6 {
   color: red;
   font-size: 1.2rem;
   font-weight: 700;
+  text-transform: none;
+  text-overflow: ellipsis;
 
 }
 
@@ -401,7 +409,7 @@ font-family: sans-serif;
 color: white;
 font-size: 1.5rem;
 font-weight: 600;
-text-transform: uppercase;
+/* text-transform: uppercase; */
 line-height: 1.5;
 text-align: center;
 
@@ -446,7 +454,7 @@ font-family: sans-serif;
 color: white;
 font-size: 1.5rem;
 font-weight: 600;
-text-transform: uppercase;
+/* text-transform: uppercase; */
 line-height: 1.5;
 text-align: center;
 }
