--- a/src/components/CollectionStory.css
+++ b/src/components/CollectionStory.css
@@ -9,6 +9,7 @@
       display: flex;
       flex-direction: row;
       gap: 2rem;
+      
     
         
     }
@@ -17,7 +18,7 @@
       .content {
         background: rgb(36,0,0);
         background: linear-gradient(0deg, #111 0%, #111 38%, red);   
-  
+       
         flex: 1.75;
         display: flex;
         flex-direction: column;
@@ -33,8 +34,13 @@
    
         }
 
+        .imageA {
+          overflow: hidden;
+        }
+
+
         .imageA img {
-          
+         
             border-radius: 350px;
             transform: scale(.9);
             border: solid;
@@ -44,7 +50,7 @@
 
       
 
-@media (max-width:1500px) {
+@media (max-width:1200px) {
   .like {
     margin:  0;
     padding-bottom: 10rem;
