--- a/src/components/RoadMap.css
+++ b/src/components/RoadMap.css
@@ -26,7 +26,7 @@
 
 }
 
-.card-road {
+.card-road2 {
 
   padding: 20px;
   margin-top: 2rem;
@@ -34,7 +34,7 @@
   background-color: #111;
   border: solid;
   border-width: 2.01px;
-  border-color: red;
+  border-color: rgb(46, 46, 46);
   text-align: center;
 
 
