--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ body {
   sans-serif;
 -webkit-font-smoothing: antialiased;
 -moz-osx-font-smoothing: grayscale;
-background-color: #111;
+background-color: #000;
 color: white;
 overflow-x: hidden;
 }
@@ -18,6 +18,7 @@ font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
 * {
 margin: 0;
 padding: 0;
+padding-top: 2px;
 box-sizing: border-box;
 width: 100%;
 overflow-x: hidden;
@@ -246,7 +247,7 @@ overflow-x: scroll;
 
 
 
-@media (max-width:1100px) {
+@media (max-width:1500px) {
 
 * {
   overflow-x: hidden;
@@ -306,6 +307,7 @@ height: max-content;
 display: flex;
 justify-content: center;
 align-items: center;
+
 /* overflow-y: hidden; */
 padding-left: 20px;
 padding-right: 20px;
