--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -1,12 +1,13 @@
 nav {
-   padding-top: 50px;
+   padding-top: 150px;
     min-height: 10vh;
     display: flex;
     justify-content: space-around;
     align-items: center;
+
     button {
         background: transparent;
-        border: none;
+          border: none;
         cursor: pointer;
         transition: all 0.3s ease;
         padding: 0.5rem 1rem;
@@ -15,9 +16,50 @@ nav {
         border-radius: 30px;
         background: red;
         color: white;
+        // position: absolute;
+        // right: 20px;
+        // top: 20px;
         &:hover {
             background: rgb(218, 218, 218);
             color: black
         }
     }
+}
+
+
+@media screen and (max-width: 768px) {
+    nav {
+        padding-top: 150px;
+         min-height: 10vh;
+         display: flex;
+         justify-content: space-around;
+         align-items: center;
+     
+         button {
+             background: transparent;
+               border: none;
+             cursor: pointer;
+             transition: all 0.3s ease;
+             padding: .5rem .1rem;
+             font-size: 1.1rem;
+             width: 30px;
+             font-size: 0rem;
+             border-radius: 50px;
+             background: red;
+             color: white;
+            //  position: absolute;
+            //  right: 20px;
+            //  top: 35px;
+             .icon {
+                font-size: 1rem;
+             }
+             &:hover {
+                 background: rgb(218, 218, 218);
+                 color: black
+             }
+         }
+
+
+
+        }
 }
