--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -2,42 +2,7 @@
 
   
    /* NAVBAR STYLING STARTS */
-   .player {
-    height: 100px;
-    width: 320px;
-    background: black;
-     display: flex;
-    flex-direction: row;
-    border-radius: 10px;
-    border: solid;
-    border-width: 1px;
-    border-color: #ff0000;
-  
-  
-  }
-  
-  .song-cover {
-    width: 30%;
-    background: #ff0000;
-  }
-  
-  .song-meta {
-    width: 75%;
-    padding-left: 1rem;
-    line-height: 2rem;
-    margin: auto;
-  }
-  
-  .musicplayer {
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    justify-content: center;
-    align-items: center;
-    top: 100px;
-  
-  }
-  
+
   .nowPlaying {
     text-align: center; 
     font-size: 1.5rem;
@@ -57,7 +22,8 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+   position: relative;
+   bottom: 0px;
     
     
    }
@@ -100,9 +66,16 @@
 
   }
   
+  .nav-links {
+    padding-left: 50px;
+    padding-right: 50px;
+
+  }
+
    .nav-links a {
     color: #fff;
     text-decoration: none;
+
   
     
 
@@ -132,7 +105,7 @@
 
    }
    .menu li {
-    padding: 5px 14px;
+    
     
   
     
@@ -150,9 +123,10 @@
       gap: 1em;
       font-size: 18px;
       padding-top: 0rem;
-      width: 70%;
+      width: 80%;
       position: absolute;
-      right: 75px;
+      left: 240px;
+      transform: scale(1);
     }
 
     #logo {
@@ -221,12 +195,14 @@
    }
    .nav-links a {
     color: #fff;
+   
+  
    }
    
   
   .btn-wallet {
     color: white;
-    position: absolute;
+    /* position: absolute; */
     display: none;
     top: 10%;
   
