--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,7 @@ scrollbar-width: none;
 
 .section {
 width: 100%;
-height: 100vh;
+height: 150vh;
 display: flex;
 justify-content: center;
 align-items: center;
@@ -61,7 +61,7 @@ padding-right: 50px;
 
 .section-ut {
   width: 100%;
-  height: 250vh;
+  height: 400vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -74,7 +74,7 @@ padding-right: 100px;
     padding-left: 10rem;
     padding-right: 10rem;
     width: 100%;
-    height: 145vh;
+    height: 250vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -83,22 +83,21 @@ padding-right: 100px;
 
 .section-roadmap {
 width: 100%;
-height: 380vh;
+height: 700vh;
 display: flex;
 justify-content: center;
 align-items: center;
-overflow-y: hidden;
+
 padding-left: 100px;
 padding-right: 100px;
 }
 
 .section-all {
 width: 100%;
-height: 200vh;
+height: 300vh;
 display: flex;
 justify-content: center;
 align-items: center;
-overflow-y: hidden;
 padding-left: 100px;
 padding-right: 100px;
 }
@@ -510,7 +509,7 @@ overflow-x: scroll;
 
 ::-webkit-scrollbar {
   background-color: #111111;
-  width: 0.2rem;
+  width: 1rem;
 }
 
 ::-webkit-scrollbar-thumb {
@@ -526,9 +525,9 @@ html {
 
 @media only screen and (min-device-width: 280px) and (max-device-width: 1080px) {
   .app-container::-webkit-scrollbar {
-    display: none;
+  
     overflow-x: hidden;
-    overflow-y: auto;
+    overflow-y: scroll;
 
     --webkit-overflow-scrolling: touch;
   }
